modules/webgl/tests/027.vs.exp
"027.vs":3: L0001: Parse error:

0highp bvec4 bbc;
mediump float aaa;
vec3 cab;
void main() { for((x--); ++z; x++? >>= :aba >>= aaa
