modules/webgl/tests/027.vs
// https://bugzilla.mozilla.org/show_bug.cgi?id=620301

0highp bvec4 bbc;
mediump float aaa;
vec3 cab;
void main() { for((x--); ++z; x++? >>= :aba >>= aaa == cab == 0.8){ while (){}}}
